added html structure for featured blogs

--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,146 @@
 
     <!-- Our Teacher Part Ends -->
 
+    <!-- Blog Part Starts -->
+    <section id="blog">
+      <div class="blog_header">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-7">
+              <div class="section_heading text-center">
+                <h2>Our Blog</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incidiunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="blog_gallery">
+        <div class="container">
+          <div class="blog_gal_featured">
+            <div class="row gx-4">
+              <div class="col-lg-6">
+                <div
+                  class="feat_blog"
+                  style="background-image: url(images/blogBig1.png)"
+                >
+                  <div class="blog_social text-sm-end">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-facebook-f"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-behance"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-google-plus-g"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="feat_blog_title">
+                    <h4>
+                      <a href="#" class="text-white">
+                        “Education is the Backbone of a nation” It’s Proven</a
+                      >
+                    </h4>
+                  </div>
+                  <div class="web_link">
+                    <a href="#" class="text-white">https://education.com</a>
+                  </div>
+                  <div class="row text-white blog_meta">
+                    <div class="col-sm-6">
+                      <p>
+                        <i class="fas fa-calendar"></i> Published Date: 21 May,
+                        2021
+                      </p>
+                    </div>
+                    <div class="col-sm-3">
+                      <p><i class="fas fa-eye"></i> 2.5k Views</p>
+                    </div>
+                    <div class="col-sm-3">
+                      <p><i class="fas fa-share"></i> 2.5k Shares</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6">
+                <div
+                  class="feat_blog"
+                  style="background-image: url(images/blogBig2.png)"
+                >
+                  <div class="blog_social text-sm-end">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-facebook-f"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-behance"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-google-plus-g"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="feat_blog_title">
+                    <h4>
+                      <a href="#" class="text-white">
+                        “Education is the Backbone of a nation” It’s Proven</a
+                      >
+                    </h4>
+                  </div>
+                  <div class="web_link">
+                    <a href="#" class="text-white">https://education.com</a>
+                  </div>
+                  <div class="row text-white blog_meta">
+                    <div class="col-sm-6">
+                      <p>
+                        <i class="fas fa-calendar"></i> Published Date: 21 May,
+                        2021
+                      </p>
+                    </div>
+                    <div class="col-sm-3">
+                      <p><i class="fas fa-eye"></i> 2.5k Views</p>
+                    </div>
+                    <div class="col-sm-3">
+                      <p><i class="fas fa-share"></i> 2.5k Shares</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blog_gal_list"></div>
+        </div>
+      </div>
+    </section>
+    <!-- Blog Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/moment.js"></script>
