added responsive classes to featured blog

--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
             <div class="row gx-4">
               <div class="col-lg-6">
                 <div
-                  class="feat_blog"
+                  class="feat_blog mb-4 mb-lg-0"
                   style="background-image: url(images/blogBig1.png)"
                 >
                   <div class="blog_social text-sm-end">
@@ -1273,17 +1273,19 @@
                   <div class="web_link">
                     <a href="#" class="text-white">https://education.com</a>
                   </div>
-                  <div class="row text-white blog_meta">
-                    <div class="col-sm-6">
+                  <div
+                    class="row text-white text-center text-sm-start blog_meta"
+                  >
+                    <div class="col-12 col-sm-6 mb-2 mb-sm-0">
                       <p>
                         <i class="fas fa-calendar"></i> Published Date: 21 May,
                         2021
                       </p>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-3">
                       <p><i class="fas fa-eye"></i> 2.5k Views</p>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-3">
                       <p><i class="fas fa-share"></i> 2.5k Shares</p>
                     </div>
                   </div>
@@ -1329,17 +1331,19 @@
                   <div class="web_link">
                     <a href="#" class="text-white">https://education.com</a>
                   </div>
-                  <div class="row text-white blog_meta">
-                    <div class="col-sm-6">
+                  <div
+                    class="row text-white text-center text-sm-start blog_meta"
+                  >
+                    <div class="col-12 col-sm-6 mb-2 mb-sm-0">
                       <p>
                         <i class="fas fa-calendar"></i> Published Date: 21 May,
                         2021
                       </p>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-3">
                       <p><i class="fas fa-eye"></i> 2.5k Views</p>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-3">
                       <p><i class="fas fa-share"></i> 2.5k Shares</p>
                     </div>
                   </div>
