added blog gallery

--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,158 @@
               </div>
             </div>
           </div>
-          <div class="blog_gal_list"></div>
+
+          <div class="blog_gal_list mt-4">
+            <div class="row justify-content-center gx-4">
+              <div class="col-lg-3 col-sm-6 col-7 mb-4 mb-lg-0">
+                <div
+                  class="blog_gal_item"
+                  style="background-image: url(images/blogsmall1.png)"
+                >
+                  <div class="blog_social text-sm-end">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-facebook-f"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-google-plus-g"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="blog_gal_title">
+                    <h4>
+                      <a href="#" class="text-white">
+                        Traditional Elementary Education</a
+                      >
+                    </h4>
+                  </div>
+                  <div class="web_link">
+                    <a href="#" class="text-white">https://education.com</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-sm-6 col-7 mb-4 mb-lg-0">
+                <div
+                  class="blog_gal_item"
+                  style="background-image: url(images/blogsmall2.png)"
+                >
+                  <div class="blog_social text-sm-end">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-facebook-f"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-google-plus-g"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="blog_gal_title">
+                    <h4>
+                      <a href="#" class="text-white">
+                        Ideas and tips on using blogs</a
+                      >
+                    </h4>
+                  </div>
+                  <div class="web_link">
+                    <a href="#" class="text-white">https://education.com</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-sm-6 col-7 mb-4 mb-sm-0">
+                <div
+                  class="blog_gal_item"
+                  style="background-image: url(images/blogsmall3.png)"
+                >
+                  <div class="blog_social text-sm-end">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-facebook-f"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-google-plus-g"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="blog_gal_title">
+                    <h4>
+                      <a href="#" class="text-white">
+                        Nominated best blogs in 2018</a
+                      >
+                    </h4>
+                  </div>
+                  <div class="web_link">
+                    <a href="#" class="text-white">https://education.com</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-sm-6 col-7 mb-4 mb-sm-0">
+                <div
+                  class="blog_gal_item"
+                  style="background-image: url(images/blogsmall4.png)"
+                >
+                  <div class="blog_social text-sm-end">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-facebook-f"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-google-plus-g"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="blog_gal_title">
+                    <h4>
+                      <a href="#" class="text-white">
+                        Blogs for education and knowledge</a
+                      >
+                    </h4>
+                  </div>
+                  <div class="web_link">
+                    <a href="#" class="text-white">https://education.com</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
