added contact section

--- a/index.html
+++ b/index.html
@@ -1508,6 +1508,141 @@
     </section>
     <!-- Blog Part Ends -->
 
+    <!-- Contact Part Starts -->
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div
+            class="
+              col-12 col-lg-4
+              text-center text-md-start text-white
+              mb-4 mb-lg-0
+              contact_left
+            "
+          >
+            <div class="contact_logo mb-4">
+              <a href="index.html"
+                ><img src="images/footerlogo.png" alt=""
+              /></a>
+            </div>
+            <div class="footer_text">
+              <p class="mb-4">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <p class="mb-4">
+                Ut enim ad minim veniam, quis nostrud exercitation ullmco
+                laboris nisi ut aliquip ex ea.
+              </p>
+            </div>
+            <div class="contact_social text-center">
+              <ul>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-google-plus-g"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div
+            class="
+              col-12 col-md-6 col-lg-4
+              text-center text-md-start text-white
+              contact_center
+            "
+          >
+            <div class="contact_header">
+              <h4>Quick Links</h4>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About us</a></li>
+                  <li><a href="#">Terms & Conditions</a></li>
+                  <li><a href="#contact">Contact us</a></li>
+                  <li><a href="#">FAQs</a></li>
+                </ul>
+              </div>
+              <div class="col-6">
+                <ul>
+                  <li><a href="teachers.html">Our Teachers</a></li>
+                  <li><a href="#">Privacy Policy</a></li>
+                  <li><a href="#">Latest News</a></li>
+                  <li><a href="#">Success Stories</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div
+            class="
+              col-12 col-md-6 col-lg-4
+              text-center text-md-start text-white
+              contact_right
+            "
+          >
+            <div class="contact_header">
+              <h4>Contact Information</h4>
+            </div>
+            <div class="row">
+              <div class="col-12 col-md-3">
+                <ul class="d-flex d-md-block pt-3 justify-content-center">
+                  <li class="px-2 px-md-0">
+                    <i class="fas fa-home"></i>
+                  </li>
+                  <li class="px-2 px-md-0">
+                    <i class="fas fa-phone"></i>
+                  </li>
+                  <li class="px-2 px-md-0">
+                    <i class="fas fa-envelope"></i>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-12 col-md-9">
+                <ul>
+                  <li>
+                    <p class="cheader_right_heading">Location</p>
+                    <p class="contact_details">
+                      1234, Parkstreet Avenue, NewyorkAmerica.
+                    </p>
+                  </li>
+                  <li>
+                    <p class="cheader_right_heading">Phone</p>
+                    <p class="contact_details">
+                      +880 1234 567 890, 02 0987 654
+                    </p>
+                  </li>
+                  <li>
+                    <p class="cheader_right_heading">E-mail</p>
+                    <p class="contact_details">
+                      gyan@gmail.com, learning@gmail.com
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- contact Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/moment.js"></script>
