added footer slider and footer bar

--- a/index.html
+++ b/index.html
@@ -1594,6 +1594,7 @@
             class="
               col-12 col-md-6 col-lg-4
               text-center text-md-start text-white
+              mb-4
               contact_right
             "
           >
@@ -1638,6 +1639,120 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="contact_slider">
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall1.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall2.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall3.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall4.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall2.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall4.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall1.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall3.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall4.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall2.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall3.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall1.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall4.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall3.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+
+        <div class="contact_slide_item">
+          <img class="w-100" src="images/blogsmall2.png" alt="" />
+          <div class="con_sli_overlay">
+            <a class="overlay_item"> Instagram Post </a>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="footer">
+          <p class="text-white text-center py-3">
+            Copyright <i class="fas fa-copyright"></i> 2021. All rights by
+            <span>GYAN</span>
+          </p>
         </div>
       </div>
     </section>
