--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
           <div class="d-none d-lg-inline-block get_started">
@@ -1571,7 +1571,7 @@
               <h4>Quick Links</h4>
             </div>
             <div class="row">
-              <div class="col-6">
+              <div class="col-6 col-lg-7">
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
@@ -1580,7 +1580,7 @@
                   <li><a href="#">FAQs</a></li>
                 </ul>
               </div>
-              <div class="col-6">
+              <div class="col-6 col-lg-5">
                 <ul>
                   <li><a href="teachers.html">Our Teachers</a></li>
                   <li><a href="#">Privacy Policy</a></li>
