--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Our Teachers</a>
+              <a class="nav-link" href="teachers.html">Our Teachers</a>
             </li>
 
             <li class="nav-item">
