fixed script and css links for slick slider

--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,8 @@
     />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="css/tiny-slider.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/slick-theme.css" />
     <link rel="stylesheet" href="css/pb.calendar.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
@@ -1763,7 +1764,7 @@
     <script src="js/moment.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/pb.calendar.min.js"></script>
     <script src="js/script.js"></script>
   </body>
