--- a/courses.html
+++ b/courses.html
@@ -46,7 +46,7 @@
     <!-- Nav Part Starts -->
     <nav class="navbar navbar-expand-lg">
       <div class="container align-items-end">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
         </a>
         <button
@@ -77,7 +77,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Our Events</a>
+              <a class="nav-link" href="events.html">Our Events</a>
             </li>
 
             <li class="nav-item">
