--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Nav Part Starts -->
     <nav class="navbar navbar-expand-lg">
       <div class="container align-items-end">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
         </a>
         <button
@@ -70,15 +70,15 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
-              </li>
+              <a class="nav-link" href="about.html">About Us</a>
+            </li>
 
             <li class="nav-item">
               <a class="nav-link" href="courses.html">Our Courses</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Our Events</a>
+              <a class="nav-link" href="events.html">Our Events</a>
             </li>
 
             <li class="nav-item">
