removed slider dots div

--- a/about.html
+++ b/about.html
@@ -97,6 +97,28 @@
     </nav>
     <!-- Nav Part Ends -->
 
+    <!-- Nav Below Part Starts -->
+    <section id="page_header">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5 text-center">
+            <h3>About Us</h3>
+            <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+              <ol class="breadcrumb justify-content-center">
+                <li class="breadcrumb-item">
+                  <a class="text-white" href="index.html">Home</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">
+                  About Us
+                </li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Nav Below Part Ends -->
+
     <!-- Support Part Starts -->
     <section id="support">
       <div class="container">
@@ -143,11 +165,6 @@
         </div>
         <div class="row about_content">
           <div class="col-lg-6 about_left">
-            <div class="slider_dots">
-              <button><i class="far fa-circle"></i></button>
-              <button><i class="far fa-circle"></i></button>
-              <button><i class="far fa-circle"></i></button>
-            </div>
             <div class="about_slider">
               <div class="slide_item">
                 <img src="images/aboutSlider1.png" alt="" />
