--- a/courses.html
+++ b/courses.html
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center">
-            <h3>Our Teachers</h3>
+            <h3>Our Courses</h3>
             <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item">
