added about page contents

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/slick-theme.css" />
     <link rel="stylesheet" href="css/pb.calendar.min.css" />
+    <link rel="stylesheet" href="css/venobox.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
@@ -150,21 +151,10 @@
     <!-- Support Part Ends -->
 
     <!-- About Us Part Starts -->
-    <section id="home_about">
+    <section id="about">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-7">
-            <div class="section_heading text-center">
-              <h2>About Us</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incidiunt ut labore et dolore magna aliqua.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row about_content">
-          <div class="col-lg-6 about_left">
+        <div id="page_about" class="row about_content">
+          <div class="r-1 col-lg-6 about_left">
             <div class="about_slider">
               <div class="slide_item">
                 <img src="images/aboutSlider1.png" alt="" />
@@ -177,7 +167,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 about_right text-center text-md-start">
+          <div class="r-1 col-lg-6 about_right text-center text-md-start">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
@@ -188,9 +178,78 @@
             </p>
             <p>
               et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-              Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem
+              ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt.
             </p>
-            <a href="#" class="prime_bg">Know More</a>
+            <p>
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud exercitation ullaco laboris nisi ut aliquip ex ea commodo
+              consequat.Duis aute irure dolor in reprehenderit in voluptate.
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum. Sed ut perspicitis unde omnis
+              iste natus error sit voluptatem accusantium doloremque laudantium,
+              totam rem aperiam, eaque ipsa quae ab.
+            </p>
+          </div>
+          <div class="r-2 col-12">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus coodo vivera maas
+              accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore.et dolore magna aliqua. Quis ipsum suspendisse ultrices
+              gravida. Risus commodo viverra maecenas accumsan lacus vel
+              facilisis.
+            </p>
+          </div>
+          <div class="r-3 col-lg-6 about_right text-center text-md-end">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus coodo vivera maecenas
+              accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore.
+            </p>
+            <p>
+              et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+              Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem
+              ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt.
+            </p>
+            <p>
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud exercitation ullaco laboris nisi ut aliquip exconsectetur
+              adipisicing elit, sed do eiusmod tempor incididunt.
+            </p>
+          </div>
+          <div class="r-3 col-lg-6 about_left">
+            <div class="modal_vid">
+              <img src="images/aboutSlider3.png" alt="" />
+              <div class="vid_overlay">
+                <a
+                  class="venobox"
+                  data-vbtype="video"
+                  href="https://www.youtube.com/watch?v=xxx"
+                  ><i class="fas fa-play text-center"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="r-4 col-12 text-center">
+            <p class="text-end">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus coodo vivera maas
+              accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore.et dolore magna aliqua. Quis ipsum suspendisse ultrices
+              gravida. Risus commodo viverra maecenas accumsan lacus vel
+              facilisis.
+            </p>
             <a href="#" class="prime_bg">Enroll Now</a>
           </div>
         </div>
@@ -454,6 +513,7 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/venobox.min.js"></script>
     <script src="js/pb.calendar.min.js"></script>
     <script src="js/script.js"></script>
   </body>
