fixed text align for 3rd row paragraph

--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
               facilisis.
             </p>
           </div>
-          <div class="r-3 col-lg-6 about_right text-center text-md-end">
+          <div class="r-3 col-lg-6 about_right text-end">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
