changed breakpoints for contact quick link section

--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@
               <h4>Quick Links</h4>
             </div>
             <div class="row">
-              <div class="col-6 col-lg-7">
+              <div class="col-sm-6 col-lg-7">
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About us</a></li>
@@ -1610,7 +1610,7 @@
                   <li><a href="#">FAQs</a></li>
                 </ul>
               </div>
-              <div class="col-6 col-lg-5">
+              <div class="col-sm-6 col-lg-5">
                 <ul>
                   <li><a href="teachers.html">Our Teachers</a></li>
                   <li><a href="#">Privacy Policy</a></li>
