--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gyan - Education HTML Template</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;700&display=swap"
       rel="stylesheet"
