added padding to main nav

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <!-- Header Ends -->
 
     <!-- Nav Part Starts -->
-    <nav class="navbar navbar-expand-lg">
+    <nav id="main_nav" class="navbar navbar-expand-lg">
       <div class="container align-items-end">
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
