--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Header Ends -->
 
     <!-- Nav Part Starts -->
-    <nav class="navbar navbar-expand-lg">
+    <nav id="main_nav" class="navbar navbar-expand-lg">
       <div class="container align-items-end">
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
@@ -1796,6 +1796,7 @@
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/pb.calendar.min.js"></script>
+    <script src="js/venobox.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
