added back to top button

--- a/index.html
+++ b/index.html
@@ -1789,6 +1789,12 @@
     </section>
     <!-- contact Part Ends -->
 
+    <!-- Back to Top Starts -->
+    <div class="b2t_btn">
+      <i class="fas fa-angle-up"></i>
+    </div>
+    <!-- Back to Top Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/moment.js"></script>
