changed about section class names for consistency

--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
     <section id="about">
       <div class="container">
         <div id="page_about" class="row about_content">
-          <div class="r-1 col-lg-6 about_left">
+          <div class="r-1 col-lg-6 about_media">
             <div class="about_slider">
               <div class="slide_item">
                 <img src="images/aboutSlider1.png" alt="" />
@@ -168,7 +168,7 @@
               </div>
             </div>
           </div>
-          <div class="r-1 col-lg-6 about_right text-center text-md-start">
+          <div class="r-1 col-lg-6 about_text text-center text-md-start">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
@@ -206,7 +206,7 @@
               facilisis.
             </p>
           </div>
-          <div class="r-3 col-lg-6 about_right text-end">
+          <div class="r-3 col-lg-6 about_text text-end">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
@@ -227,7 +227,7 @@
               adipisicing elit, sed do eiusmod tempor incididunt.
             </p>
           </div>
-          <div class="r-3 col-lg-6 about_left">
+          <div class="r-3 col-lg-6 about_media">
             <div class="modal_vid">
               <img src="images/aboutSlider3.png" alt="" />
               <div class="vid_overlay">
