--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </div>
         </div>
         <div class="row about_content">
-          <div class="col-lg-6 about_left">
+          <div class="col-lg-6 about_media">
             <div class="about_slider">
               <div class="slide_item">
                 <img src="images/aboutSlider1.png" alt="" />
@@ -240,7 +240,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 about_right text-center text-md-start">
+          <div class="col-lg-6 about_text text-center text-md-start">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
