--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="home_slider">
         <div
           class="slide_content"
-          style="background-image: url(images/banner_01.png)"
+          style="background-image: url(images/banner_01.jpg)"
         >
           <div class="container">
             <div class="row align-items-center">
@@ -1796,7 +1796,7 @@
     <!-- Back to Top Ends -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/moment.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
